// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StudentTable /> > StudentTable Component > should render correctly 1`] = `
<DocumentFragment>
  <div
    style="text-align: left;"
  >
    <span>
      <span>
        Filter by instructor: 
      </span>
      <div
        aria-expanded="false"
        class="ui selection scrolling dropdown"
        role="listbox"
        style="width: 3em;"
        tabindex="0"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="divider text"
          role="alert"
        >
          Select Teacher
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
        />
      </div>
    </span>
    <span>
       Tag filters: 
    </span>
    <span
      class="tagFilter"
    >
      <span>
        <button
          class="ui grey mini basic compact button"
          style="display: inline-block;"
          type="button"
        >
          <p>
            No tag
          </p>
        </button>
      </span>
      <span>
        <button
          class="ui red mini basic compact button"
          style="display: inline-block;"
          type="button"
        >
          <p>
            Javascript
          </p>
        </button>
      </span>
      <span>
        <button
          class="ui yellow mini basic compact button"
          style="display: inline-block;"
          type="button"
        >
          <p>
            HTML
          </p>
        </button>
      </span>
      <span>
        <button
          class="ui grey mini basic compact button"
          style="display: inline-block;"
          type="button"
        >
          <p>
            DROPPED
          </p>
        </button>
      </span>
    </span>
  </div>
  <br />
  <div
    style="overflow-x: scroll; overflow-y: visible;"
  >
    <table
      class="ui celled single line unstackable compact table"
      style="overflow-x: visible;"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Student
          </th>
          <th
            class=""
          >
            Project Info
          </th>
          <th
            class="six wide"
          >
            Instructor
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="TableRowForDroppedOutStudent"
        >
          <td
            class=""
          >
            <i
              aria-hidden="true"
              class="black warning icon"
            />
            <span>
              Johan Wilhelm Studerande
              <br />
              (014553242)
            </span>
          </td>
          <td
            class=""
          >
            <span>
              Tiran toinen labraprojekti
              <br />
              <a
                href="http://github.com/tiralabra2"
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  aria-hidden="true"
                  class="black github icon"
                />
                tiralabra2
              </a>
              <div>
                <span
                  style="float: left; margin-right: 0.33em;"
                >
                  <div
                    class="ui buttons mini"
                  >
                    <button
                      class="ui red mini compact button"
                      style="display: inline-block;"
                      type="button"
                    >
                      <p>
                        Javascript
                      </p>
                    </button>
                  </div>
                </span>
              </div>
            </span>
          </td>
          <td
            class=""
          >
            <span>
              not assigned
            </span>
          </td>
        </tr>
        <tr
          class="TableRowForDroppedOutStudent"
        >
          <td
            class=""
          >
            <i
              aria-hidden="true"
              class="black warning icon"
            />
            <span>
              Teräs Henkilö
              <br />
              (014666666)
            </span>
          </td>
          <td
            class=""
          >
            <span>
              Tira super projekti
              <br />
              <a
                href="http://github.com/superprojekti"
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  aria-hidden="true"
                  class="black github icon"
                />
                superprojekti
              </a>
              <div>
                <span
                  style="float: left; margin-right: 0.33em;"
                >
                  <div
                    class="ui buttons mini"
                  >
                    <button
                      class="ui grey mini compact button"
                      style="display: inline-block;"
                      type="button"
                    >
                      <p>
                        DROPPED
                      </p>
                    </button>
                  </div>
                </span>
                <span
                  style="float: left; margin-right: 0.33em;"
                >
                  <div
                    class="ui buttons mini"
                  >
                    <button
                      class="ui yellow mini compact button"
                      style="display: inline-block;"
                      type="button"
                    >
                      <p>
                        HTML
                      </p>
                    </button>
                  </div>
                </span>
              </div>
            </span>
          </td>
          <td
            class=""
          >
            <span>
              not assigned
            </span>
          </td>
        </tr>
        <tr
          class="TableRowForDroppedOutStudent"
        >
          <td
            class=""
          >
            <i
              aria-hidden="true"
              class="black warning icon"
            />
            <span>
              Maarit Mirja Opiskelija
              <br />
              (014578343)
            </span>
          </td>
          <td
            class=""
          >
            <span>
              Tiran labraprojekti
              <br />
              <a
                href="http://github.com/tiralabra1"
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  aria-hidden="true"
                  class="black github icon"
                />
                tiralabra1
              </a>
              <div />
            </span>
          </td>
          <td
            class=""
          >
            <span>
              not assigned
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`<StudentTableRow /> > StudentTableRow Component > should render correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRowForDroppedOutStudent"
      >
        <td
          class=""
        >
          <div
            class="ui fitted checkbox"
          >
            <input
              class="hidden"
              id="select10012"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label
              for="select10012"
            />
          </div>
        </td>
        <td
          class=""
        >
          <i
            aria-hidden="true"
            class="black warning icon"
          />
          <span>
            Johan Wilhelm Studerande
            <br />
            (014553242)
          </span>
        </td>
        <td
          class=""
        >
          <span>
            Tiran toinen labraprojekti
            <br />
            <a
              href="http://github.com/tiralabra2"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                aria-hidden="true"
                class="black github icon"
              />
              tiralabra2
            </a>
            <div>
              <span
                style="float: left; margin-right: 0.33em;"
              >
                <div
                  class="ui buttons mini"
                >
                  <button
                    class="ui red mini compact button"
                    style="display: inline-block;"
                    type="button"
                  >
                    <p>
                      Javascript
                    </p>
                  </button>
                </div>
              </span>
            </div>
          </span>
        </td>
        <td
          class="selectable center aligned"
          style="position: relative;"
        >
          <a
            href="/labtool/reviewstudent/TKT20010.2018.K.A.1/10012/1"
            style="position: absolute; display: flex; top: 0px; left: 0px; right: 0px; bottom: 0px; justify-content: center; align-items: center; height: 100%;"
          >
            <div>
              <p
                style="display: flex; justify-content: center; align-items: center; height: 100%;"
              >
                -
              </p>
            </div>
          </a>
        </td>
        <td
          class="selectable center aligned"
          style="position: relative;"
        >
          <a
            href="/labtool/reviewstudent/TKT20010.2018.K.A.1/10012/2"
            style="position: absolute; display: flex; top: 0px; left: 0px; right: 0px; bottom: 0px; justify-content: center; align-items: center; height: 100%;"
          >
            <div>
              <p
                style="display: flex; justify-content: center; align-items: center; height: 100%;"
              >
                -
              </p>
            </div>
          </a>
        </td>
        <td
          class="selectable center aligned"
          style="position: relative;"
        >
          <a
            href="/labtool/reviewstudent/TKT20010.2018.K.A.1/10012/3"
            style="position: absolute; display: flex; top: 0px; left: 0px; right: 0px; bottom: 0px; justify-content: center; align-items: center; height: 100%;"
          >
            <div>
              <p
                style="display: flex; justify-content: center; align-items: center; height: 100%;"
              >
                -
              </p>
            </div>
          </a>
        </td>
        <td
          class="selectable center aligned"
          style="position: relative;"
        >
          <a
            href="/labtool/reviewstudent/TKT20010.2018.K.A.1/10012/4"
            style="position: absolute; display: flex; top: 0px; left: 0px; right: 0px; bottom: 0px; justify-content: center; align-items: center; height: 100%;"
          >
            <div>
              <p
                style="display: flex; justify-content: center; align-items: center; height: 100%;"
              >
                -
              </p>
            </div>
          </a>
        </td>
        <td
          class="selectable center aligned"
          style="position: relative;"
        >
          <a
            href="/labtool/reviewstudent/TKT20010.2018.K.A.1/10012/5"
            style="position: absolute; display: flex; top: 0px; left: 0px; right: 0px; bottom: 0px; justify-content: center; align-items: center; height: 100%;"
          >
            <div>
              <p
                style="display: flex; justify-content: center; align-items: center; height: 100%;"
              >
                -
              </p>
            </div>
          </a>
        </td>
        <td
          class="selectable center aligned"
          style="position: relative;"
        >
          <a
            href="/labtool/reviewstudent/TKT20010.2018.K.A.1/10012/6"
            style="position: absolute; display: flex; top: 0px; left: 0px; right: 0px; bottom: 0px; justify-content: center; align-items: center; height: 100%;"
          >
            <div>
              <p
                style="display: flex; justify-content: center; align-items: center; height: 100%;"
              >
                -
              </p>
            </div>
          </a>
        </td>
        <td
          class="selectable center aligned"
          style="position: relative;"
        >
          <a
            href="/labtool/reviewstudent/TKT20010.2018.K.A.1/10012/7"
            style="position: absolute; display: flex; top: 0px; left: 0px; right: 0px; bottom: 0px; justify-content: center; align-items: center; height: 100%;"
          >
            <div>
              <p
                style="display: flex; justify-content: center; align-items: center; height: 100%;"
              >
                -
              </p>
            </div>
          </a>
        </td>
        <td
          class="center aligned"
        >
          0
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
